--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+anyhow = "1.0.95"
+hex = "0.4.3"
+num-bigint = "0.4.6" 
 rust-crypto-wasm = "0.3.1"
 serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.138"
@@ -13,7 +16,7 @@ version = "0.3.77"
 features = [
     "Document",
     "Element",
-    "HTMLElement",
+    "HtmlElement",
     "Node",
     "Window",
 ]
