--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,11 +5,13 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.95"
+chrono = "0.4.39"
 hex = "0.4.3"
 num-bigint = "0.4.6" 
 rust-crypto-wasm = "0.3.1"
 serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.138"
+wasm-bindgen = "0.2.100"
 
 [dependencies.web-sys]
 version = "0.3.77"
@@ -20,3 +22,6 @@ features = [
     "Node",
     "Window",
 ]
+
+[lib]
+crate-type = ["cdylib"]
